# serene

./: CMakeLists.txt  README.md
examples/: main.sr
src/: arena.h  lexer.cpp  lexer.h  main  main.cpp  parser.cpp  parser.h  token.cpp  token.h  typecheck.cpp  typecheck.h  vec.h
